third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/call_ordering.exp

Diagnostics:
error: cannot pass mutable reference in local `s`, which is still borrowed, as function argument
  ┌─ tests/reference-safety/v1-tests/call_ordering.move:7:13
  │
6 │         let f = &mut s.f;
  │                 -------- previous mutable field borrow
7 │         foo(freeze(s), { *f = 0; 1 })
  │             ^^^^^^^^^ passed here

error: cannot mutably borrow local `s` since other references exists
   ┌─ tests/reference-safety/v1-tests/call_ordering.move:12:25
   │
12 │         bar(&mut s.f, { s.f = 0; 1 })
   │             --------    ^^^ mutable borrow attempted here
   │             │
   │             previous mutable field borrow
